tenants/triage-analysis-sast/llama-stack-server-milvus-rhoai/base/postgresql-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: postgresql-llama-stack
  labels:
    app: postgresql-llama-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql-llama-stack
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresql-llama-stack
    spec:
      containers:
      - env:
        - name: POSTGRESQL_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: postgresql-llama-stack
        - name: POSTGRESQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: postgresql-llama-stack
        - name: POSTGRESQL_DATABASE
          valueFrom:
            secretKeyRef:
              key: database-name
              name: postgresql-llama-stack
        image: 'image-registry.openshift-image-registry.svc:5000/openshift/postgresql:15-el8'
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /usr/libexec/check-container
            - --live
          initialDelaySeconds: 120
          timeoutSeconds: 10
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /usr/libexec/check-container
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            memory: 1Gi
        securityContext:
          capabilities: {}
          privileged: false
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: postgresql-llama-stack-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: postgresql-llama-stack-data
        persistentVolumeClaim:
          claimName: postgresql-llama-stack
